# physics-apple

./: .gitignore  Cargo.toml  Makefile  README.md
frames/: check-status.sh  watch-status.sh
src/: cli.rs  gpu.rs  gui.rs  main.rs  physics.rs  rules.md  sequence.rs
src/physics/: board.rs  engine.rs  force.rs  particle.rs
src/shaders/: static-field.cu  static-field.ptx
