[package]
name = "physics-apple"
version = "0.1.0"
edition = "2021"
description = "Generating physics simulation for the entire screen :D"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
clap = { version = "4.5.27", features = ["cargo", "derive"] }
image = "0.25.5"
pixels = "0.15.0"
rand = "0.9.0"
rustacuda = "0.1.3"
winit = "0.29"
winit_input_helper = "0.15.0"
